# Flash-Rerank-Rust-Python-WASM-CLI-

./: .gitignore  CHANGELOG.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT-v0.1.x-only  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  dco.yml
benchmarks/: Cargo.toml
benchmarks/benches/: competitive.rs  msmarco_accuracy.rs  rerank_latency.rs  throughput.rs  tokenizer_throughput.rs
benchmarks/src/: accuracy.rs  beir.rs  latency.rs  lib.rs  msmarco.rs
examples/basic_rerank/: Cargo.toml
examples/basic_rerank/src/: main.rs
examples/two_stage_pipeline/: Cargo.toml
examples/two_stage_pipeline/src/: main.rs
flash-rerank-cli/: Cargo.toml
flash-rerank-cli/src/: bench.rs  compile.rs  download.rs  main.rs  models.rs  serve.rs
flash-rerank-cli/tests/: cli_tests.rs
flash-rerank-python/: Cargo.toml  pyproject.toml
flash-rerank-python/src/: lib.rs
flash-rerank-server/: Cargo.toml
flash-rerank-server/src/: ab_test.rs  canary.rs  drift.rs  lib.rs  main.rs  routes.rs  telemetry.rs
flash-rerank-wasm/: Cargo.toml
flash-rerank-wasm/src/: lib.rs
flash_rerank/: Cargo.toml
flash_rerank/examples/: gpu_bench_models.rs  gpu_check.rs  micro_profile.rs  pipeline_benchmark.rs  profile_pipeline.rs
flash_rerank/src/: lib.rs  types.rs
flash_rerank/src/batch/: mod.rs
flash_rerank/src/calibrate/: mod.rs
flash_rerank/src/cascade/: mod.rs
flash_rerank/src/engine/: colbert.rs  mod.rs  ort_backend.rs  parallel.rs  tensorrt.rs
flash_rerank/src/fusion/: mod.rs
flash_rerank/src/models/: mod.rs
flash_rerank/src/multi_gpu/: mod.rs
flash_rerank/src/tokenize/: mod.rs
flash_rerank/tests/: accuracy_snapshots.rs  integration.rs  property_tests.rs  snapshots.rs  stress.rs
flash_rerank/tests/snapshots/: accuracy_snapshots__miniml_msmarco_fp16_ndcg10.snap  accuracy_snapshots__miniml_msmarco_mrr.snap  accuracy_snapshots__miniml_msmarco_ndcg10.snap  accuracy_snapshots__miniml_scifact_ndcg10.snap  snapshots__error_display_strings.snap  snapshots__fusion_config_default.snap  snapshots__model_config_default.snap  snapshots__rerank_config_default.snap
scripts/: release.sh
