[package]
name = "flash-rerank-benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark suite for Flash-Rerank"
authors.workspace = true

[dependencies]
flash_rerank = { version = "0.2.0", path = "../flash_rerank" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
divan = "0.1"

[[bench]]
name = "rerank_latency"
harness = false

[[bench]]
name = "tokenizer_throughput"
harness = false

[[bench]]
name = "msmarco_accuracy"
harness = false

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "competitive"
harness = false
