[package]
name = "flash-rerank-python"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Python bindings for Flash-Rerank via PyO3"
authors.workspace = true

[dependencies]
flash_rerank = { version = "0.2.0", path = "../flash_rerank" }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py39"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "6"

[lib]
name = "flash_rerank"
crate-type = ["cdylib"]
