[build-system]
requires = ["maturin>=1.12,<2.0"]
build-backend = "maturin"

[project]
name = "flash-rerank"
version = "0.2.0"
description = "Blazing-fast neural reranking — cross-encoder and ColBERT inference"
requires-python = ">=3.9"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "The Sauce Suite" }]
keywords = ["reranking", "semantic-search", "cross-encoder", "information-retrieval", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "flash_rerank"
